--- a/index.html
+++ b/index.html
@@ -5,10 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <section class="banner">
+            <div class="banner-container">
+            <div class="banner-info">
+                <h1 class="banner-title">
+                    Let's make beautiful flowers a part of your life.
+                </h1>
+                <p class="banner-description">
+                    “Flowers always make people better, happier and more helpful; they are sunshine, food and medicine for the soul.” – Luther Burbank
+                </p>
+                <button class="btn-primary"> Shop Now </button>
+            </div>
+            <div class="banner-image">
+                <img class="banner-img" src="Images/pngwing 10.png" alt="">
+            </div>
+        </div>
+        </section>
+    </header>
+    <!-- main section starts here  -->
+    <main>
+        <section class="featured-flowers">
+            <h2 class="feature-title">Our Featured Flowers</h2>
+            <p class="feature-info">We provide freshly picked flowers right to your doorstep.</p>
+        <div class="flowers">
+            <div class="flower-img"><img src="Images/pngwing 6.png" alt="Pink Tulip"></div>
+            <div class="flower-img"><img src="Images/pngwing 5.png" alt="Bouquet"></div>
+            <div class="flower-img"><img src="Images/pngwing 7.png" alt="Yellow Tulip"></div>
+        </div>
+        </section>
+    </main>
+    <footer >
+        <div class="footer">
+          <h2 class="footer-title"><span class="colored-part">Flower</span>Shop</h2>
+          <p class="footer-description">“Love is the flower you’ve got to let grow.” - John Lennon</p>
+          <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
+        </div>
+
+    </footer>
 </body>
 </html>
