--- a/index.html
+++ b/index.html
@@ -32,12 +32,38 @@
     <main>
         <section class="featured-flowers">
             <h2 class="feature-title">Our Featured Flowers</h2>
-            <p class="feature-info">We provide freshly picked flowers right to your doorstep.</p>
+            <p class="feature-info">“The very best relationship has a gardener and a flower. The gardener nurtures and the flower blooms.”– Carole Radziwill</p>
         <div class="flowers">
             <div class="flower-img"><img src="Images/pngwing 6.png" alt="Pink Tulip"></div>
             <div class="flower-img"><img src="Images/pngwing 5.png" alt="Bouquet"></div>
             <div class="flower-img"><img src="Images/pngwing 7.png" alt="Yellow Tulip"></div>
         </div>
+        </section>
+        <section class="offer">
+            <div class="deals">
+                <div class="hot-deal">
+                <h2 class="deal-title">
+                    Hot Deal ! Sale Up To 25% <span class="colored-part">Off</span>
+                </h2>
+                <p class="deal-info">
+                    Get a whooping 25% order on signing up in our website. Deal ends on 16th July.
+                </p> <br>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+                <div class="hot-deal-img">
+                    <img src="Images/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="insta-section">
+            <h2 class="insta-title">Instagram</h2>
+            <p class="insta-info">Popular flowers from our social media this week.</p>
+            <div class="insta-images">
+                <div class="insta-flowers"><img src="Images/Flower 01.png" alt=""></div>
+                <div class="insta-flowers"><img src="Images/Rectangle 4.png" alt=""></div>
+                <div class="insta-flowers"><img src="Images/Rectangle 5.png" alt=""></div>
+                <div class="insta-flowers"><img src="Images/Rectangle 6.png" alt=""></div>
+            </div>
         </section>
     </main>
     <footer >
