--- a/index.html
+++ b/index.html
@@ -65,13 +65,26 @@
                 <div class="insta-flowers"><img src="Images/Rectangle 6.png" alt=""></div>
             </div>
         </section>
+        <section class="subscribe-section">
+            <div class="subscribe-container">
+                <div class="subscribe-content">
+                <h3 class="subscribe-title">Get the latest Deal</h3>
+                <p class="subscription-info">1000৳ off coupon code for first shopping.</p>
+                <form action="">
+                <input class="email" type="text" placeholder="Enter your email"> <button class="btn-primary">Subscribe</button>
+            </form>
+            </div>
+            </div>
+        </section>
     </main>
     <footer >
-        <div class="footer">
+        <div class="footer-container">
+            <div class="footer">
           <h2 class="footer-title"><span class="colored-part">Flower</span>Shop</h2>
           <p class="footer-description">“Love is the flower you’ve got to let grow.” - John Lennon</p>
           <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
         </div>
+    </div>
 
     </footer>
 </body>
