--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 <body>
     <header>
+        <div class="nav-container">
+            <div class="nav-heading">
+                <h1 class="nav-title"><span class="colored-part">Flower</span>Shop</h1>
+            </div>
+            <div class="menus">
+                <li class="menu-names">Home</li>
+                <li class="menu-names">Shop</li>
+                <li class="menu-names">About</li>
+                <li class="menu-names">Contact</li>
+            </div>
+        </div>
         <section class="banner">
             <div class="banner-container">
             <div class="banner-info">
