--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Let's make beautiful flowers a part of your life.
                 </h1>
                 <p class="banner-description">
-                    “Flowers always make people better, happier and more helpful; they are sunshine, food and medicine for the soul.” – Luther Burbank
+                    “Flowers always make people better, happier and more helpful; <br> they are sunshine, food and medicine for the soul.” – Luther Burbank
                 </p>
                 <button class="btn-primary"> Shop Now </button>
             </div>
