--- a/index.html
+++ b/index.html
@@ -45,10 +45,35 @@
             <h2 class="feature-title">Our Featured Flowers</h2>
             <p class="feature-info">“The very best relationship has a gardener and a flower. The gardener nurtures and the flower blooms.”– Carole Radziwill</p>
         <div class="flowers">
-            <div class="flower-img"><img src="Images/pngwing 6.png" alt="Pink Tulip"></div>
-            <div class="flower-img"><img src="Images/pngwing 5.png" alt="Bouquet"></div>
-            <div class="flower-img"><img src="Images/pngwing 7.png" alt="Yellow Tulip"></div>
+            <div id="pink-tulip" class="flower-img">
+                <img src="Images/pngwing 6.png" alt="Pink Tulip">
+                <h6><u>Pink Tulip</u></h6>
+            </div>
+            <div id="bouquet" class="flower-img">
+                <img src="Images/pngwing 5.png" alt="Bouquet">
+                <h6><u>Bouquet</u></h6>
+            </div>
+            <div id="yellow-tulip" class="flower-img">
+                <img src="Images/pngwing 7.png" alt="Yellow Tulip">
+                <h6><u>Yellow Tulip</u></h6>
+            </div>
         </div>
+        </section>
+        <section class="service">
+            <div class="service-container">
+                <div class="services">
+                    <img src="Images/Group 57.png" alt="">
+                    <h6 class="service-names">Same Day Delivery. Click & Collect.</h6>
+                </div>
+                <div class="services">
+                    <img src="Images/Group 58.png" alt="">
+                    <h6 class="service-names">Fresh Flowers. Local Growers.</h6>
+                </div>
+                <div class="services">
+                    <img src="Images/Group 59.png" alt="">
+                    <h6 class="service-names">24/7 Free Support.</h6>
+                </div>
+            </div>
         </section>
         <section class="offer">
             <div class="deals">
