--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <h6><u>Yellow Tulip</u></h6>
         </div>
         </section>
+        <!-- service section starts from here.  -->
         <section class="service">
             <div class="service-container">
                 <div class="services">
                     <img src="Images/Group 57.png" alt="">
                     <h6 class="service-names">Same Day Delivery. Click & Collect.</h6>
                 </div>
-                
                 <div class="services">
                     <img src="Images/Group 58.png" alt="">
                     <h6 class="service-names">Fresh Flowers. Local Growers.</h6>
@@ -80,6 +80,7 @@
                 </div>
             </div>
         </section>
+        <!-- offer section starts here  -->
         <section class="offer">
             <div class="deals">
                 <div class="hot-deal">
@@ -109,12 +110,13 @@
         <section class="subscribe-section">
             <div class="subscribe-container">
                 <div class="subscribe-content">
-                <h3 class="subscribe-title">Get the latest Deal</h3>
-                <p class="subscription-info">1000৳ off coupon code for first shopping.</p>
-                <form action="">
-                <input class="email" type="text" placeholder="Enter your email"> <button class="btn-primary">Subscribe</button>
-            </form>
-            </div>
+                  <h3 class="subscribe-title">Get The Latest Deals</h3>
+                  <p class="subscription-info">1000৳ off coupon code for first shopping.</p>
+                  <form action="">
+                  <input id="email"  type="text" placeholder="Enter your email">
+                  <button class="btn-primary">Subscribe</button>
+                  </form>
+                </div>
             </div>
         </section>
     </main>
