--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 </div>
             </div>
         </section>
+        <!-- insta scetion  -->
         <section class="insta-section">
             <h2 class="insta-title">Instagram</h2>
             <p class="insta-info">Popular flowers from our social media this week.</p>
@@ -107,6 +108,7 @@
                 <div class="insta-flowers"><img src="Images/Rectangle 6.png" alt=""></div>
             </div>
         </section>
+        <!-- subscription section  -->
         <section class="subscribe-section">
             <div class="subscribe-container">
                 <div class="subscribe-content">
